created css variables around img

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+:root {
+  --base: red;
+  --spacing: 10px;
+  --blur: 10px;
+}
+
+img {
+  padding: var(--spacing);
+  background: var(--base);
+  filter: var(--blur);
+}
+
+.hl {
+  color: var(--base);
+}
+
 body {
   text-align: center;
   background: #193549;
